tests/errors/syn_for3.java
public class syn_for3 {
public static void main(String[] args){
for ( ; ; ) {

}
}